* Added a "changes" tab with a list of revision timestamps for each note. Note yet clickable.  * Made controller.Notebooks.save_note() return the newly minted revision timestamp upon a successful save.  * Whenever we get back a revision timestamp from save_note(), we store in in the client's list of revisions for that note.  * Now raising Access_error in controller.Notebooks in various places where the notebook requested is unknown.  * Tweaked pulldown CSS a bit. Now will sport a handy-dandy scrollbar if the pulldown gets too tall, at least in real browsers.  * Fixed bug where clicking "show on startup" checkbox directly didn't visually toggle the checkbox.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -197,7 +197,9 @@ a:hover {
 
 .pulldown {
   position: absolute;
-  width: 13em;
+  text-align: left;
+  max-height: 20em;
+  overflow: auto;
   padding: 0.5em;
   font-size: 0.75em;
   border: 1px solid #000000;
@@ -206,27 +208,14 @@ a:hover {
   -webkit-border-radius: 0.25em;
 }
 
-.pulldown_button {
-  float: right;
-  border-style: outset;
-  border-width: 0px;
-  background-color: #d0e0f0;
-  font-size: 0.75em;
-  outline: none;
-  -moz-border-radius: 0.25em;
-  -webkit-border-radius: 0.25em;
-}
-
-.pulldown_button:hover {
-  background-color: #ffcc66;
-}
-
-.pulldown_toggle {
+.pulldown_link {
   color: #000000;
+  text-decoration: none;
 }
 
-.pulldown_toggle:hover {
+.pulldown_link:hover {
   color: #ff6600;
+  text-decoration: none;
 }
 
 .message {
